--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.2.0",
+    "angular-material": "^1.2.5",
+    "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
