--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "angular-material": "^1.2.5",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -36,6 +38,7 @@
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/pdfmake": "^0.2.2",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
